--- a/videoplayer/index.html
+++ b/videoplayer/index.html
@@ -9,15 +9,18 @@
     
     <h1>Video Player</h1>
 
-    <video src="video/sample1.mp4" id="video" class="screen" controls poster="img/poster.png"></video>
+    <video src="video/sample1.mp4" id="video" class="screen" poster="img/poster.png"></video>
 
     <div class="controls">
-        <button id="play" class="btn"><i class="fas fa-play"></i></button>
-        <button id="stop" class="btn"><i class="fas fa-stop"></i></button>
+        <button id="play" class="btn"><i class="fas fa-play fa-2x"></i></button>
+        <button id="stop" class="btn"><i class="fas fa-stop fa-2x"></i></button>
         <input type="range" name="progress" id="progress" class="form-range" min="0" max="100" step="0.1" value="0" />
-        <span id="timestamp" class="timestamp">00 : 00</span>
+        <span id="timestamp" class="timestamp">00:00</span>
     </div>
 
     <script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
+
+
+<!-- 9l1b2vdo -->
